# siwe_minimal_rust

./: Cargo.toml  README.md
src/: main.rs  routes.rs  tests.rs
src/routes/: custom_rejection.rs  nonce_route.rs  personal_information_route.rs  verify_route.rs
