[package]
name = "siwe_minimal"
version = "0.1.0"
edition = "2021"
authors = [ "Augmental"]
repository = "https://github.com/chris-the-wiz/siwe_minimal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

eip55 = "0.4.0"
env_logger = "0.10.0"

ethers-core = "2.0.8"
ethers-signers = "2.0.8"
hex = "0.4.3"
http = "0.2.9"
hyper = "0.14.27"

serde = "1.0.175"
serde_json = "1.0.103"
siwe = "0.6.0"

test-log = "0.2.12"

time = "0.3.23"
tokio = { version = "1.29.1",  features = ["macros",  "sync", "time"] }

warp = "0.3.5"
warp-sessions = "1.0.19"


[dev-dependencies]
reqwest = {version = "0.11.18",  features = ["blocking", "json"]}
reqwest_cookie_store = "0.6.0"
